Refining database and spot bookings
